--- a/im-ye/pom.xml
+++ b/im-ye/pom.xml
@@ -3,15 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>im</artifactId>
-        <groupId>com.yuan.im</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.4</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>com.yuan.im</groupId>
-    <artifactId>im-demo</artifactId>
+    <artifactId>im</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>im-demo</name>
+    <name>in-ye</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
@@ -29,9 +29,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.yuan.im</groupId>
-            <artifactId>websocket-server</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.yeauty</groupId>
+            <artifactId>netty-websocket-spring-boot-starter</artifactId>
+            <version>0.10.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.32</version>
         </dependency>
 
     </dependencies>
