--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 
     <modules>
         <module>im-demo</module>
+        <module>websocket-server</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
